--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.1.0",
-    "react-redux": "^9.1.1"
+    "react-redux": "^9.1.1",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
     "eslint": "^8",
